--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         default_author: github_actions
         message: 'update spider jar'
-        add: TVBox/tv.json
+        add: "['TVBox/tv.json']"
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
