--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       run: |
         rm -rf TVBox
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
+        rm -rf TVBox/.git
         cp TVBox/* /home/runner/work/tv/tv  
     - name: Update spider jar
       uses: EndBug/add-and-commit@v7
