--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         default_author: github_actions
         message: 'update spider jar'
-        add: "['tv.json']"
+        add: /home/runner/work/tv/tv/*
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
