--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
         rm -rf TVBox
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
         rm -rf TVBox/.git
-        cp -r TVBox/* /home/runner/work/tv/tv  
+        cp -r TVBox/* /home/runner/work/tv/tv
+        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' /home/runner/work/tv/tv/tv.json
     - name: Update spider jar
       uses: EndBug/add-and-commit@v7
       with:
