--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: clone 
+name: TVBox JSON
 
 on:
   schedule:
@@ -25,7 +25,7 @@ jobs:
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
-        message: 'update spider jar'
+        message: 'update files'
         add: /home/runner/work/tv/tv/*
     - name: Upload APK
       uses: actions/upload-artifact@v2
