--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,15 @@ jobs:
       run: |
         rm -rf TVBox
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
-        echo ${{ github.workspace }}
         rm -rf TVBox/.git
-        cp -r TVBox/* /home/runner/work/tv/tv
-        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' /home/runner/work/tv/tv/tv.json
+        cp -r TVBox/* ${{ github.workspace }}
+        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' ${{ github.workspace }}/tv.json
     - name: Update spider jar
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
         message: 'update files'
-        add: /home/runner/work/tv/tv/*
+        add: ${{ github.workspace }}/*
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
