--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
         
-    - name: clone
+    - name: Clone project
       run: |
         rm -rf TVBox
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
@@ -27,7 +27,7 @@ jobs:
         default_author: github_actions
         message: 'update files'
         add: ${{ github.workspace }}/*
-    - name: Upload APK
+    - name: Upload files
       uses: actions/upload-artifact@v2
       with:
         name: TVBox
