--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@ name: TVBox JSON
 
 on:
   schedule:
-    - cron: 0 0 9 * * ? 
+    - cron: 0 10 * * *
   workflow_dispatch:
-
+env:
+  TZ: Asia/Shanghai
 jobs:
   build:
 
