--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: TVBox JSON
 # 触发器
 on:
   schedule:
-    - cron: '43 9 * * *' #每周天在国际标准时间15点(北京时间+8，即 23:00)
+    - cron: '45 1 * * 2' #每周天在国际标准时间15点(北京时间+8，即 23:00)
   workflow_dispatch:
-env:
+#env:
   TZ: Asia/Shanghai
 jobs:
   build:
