--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: TVBox JSON
 # 触发器
 on:
   schedule:
-    - cron: 45 0/4 * * * #每周天在国际标准时间15点(北京时间+8，即 23:00)
+    - cron: 45 0/4 * * * 
   workflow_dispatch:
 #env:
 #  TZ: Asia/Shanghai
