--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         cp -r TVBox/* ${{ github.workspace }}
         rm -rf TVBox
         sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' ${{ github.workspace }}/tv.json
-    - name: Update spider jar
+    - name: Update files
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
