--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: TVBox JSON
 # 触发器
 on:
   schedule:
-    - cron: 45 0/4 * * * 
+    - cron: 37 14 * * * 
   workflow_dispatch:
 env:
   TZ: Asia/Shanghai
