--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: TVBox JSON
 # 触发器
 on:
   schedule:
-    - cron: 45 14 * * 2
+    - cron: 50 14 * * *
   workflow_dispatch:
 env:
   TZ: Asia/Shanghai
