--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
       run: |
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
         cp -r TVBox/* ${{ github.workspace }}
-        rm -rf .git
-        rm -rf .github
+        rm -rf ${{ github.workspace }}/.git
+        rm -rf ${{ github.workspace }}/.github
         rm -rf TVBox
         sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' ${{ github.workspace }}/tv.json
     - name: Update files
