--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Clone project
       run: |
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
+        rm -rf TVBox/.git
         cp -r TVBox/* ${{ github.workspace }}
-        rm -rf ${{ github.workspace }}/.git
         rm -rf ${{ github.workspace }}/.github
         rm -rf TVBox
         sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' ${{ github.workspace }}/tv.json
