--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,21 @@ jobs:
       run: |
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
         rm -rf TVBox/.git
-        cp -r TVBox/* ${{ github.workspace }}
-        rm -rf TVBox
-        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' ${{ github.workspace }}/tv.json
+        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' ${{ github.workspace }}/TVBox/tv.json
+
+        
+    - name: Upload files 
+      uses: actions/upload-artifact@v2
+      with:
+        name: TVBox
+        path: TVBox/*
+
     - name: Update files github
+      run: |
+        cp -r TVBox/* ${{ github.workspace }}
+        rm -rf TVBox        
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
         message: 'update files actions'
         add: ${{ github.workspace }}/*
-    - name: Upload files 
-      uses: actions/upload-artifact@v2
-      with:
-        name: TVBox
-        path: ${{ github.workspace }}/*
