--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,12 @@ jobs:
         name: TVBox
         path: TVBox/*
 
-    - name: Update files github
+    - name: delete files
       run: |
         cp -r TVBox/* ${{ github.workspace }}
         rm -rf TVBox        
+        
+    - name: Update files github
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
