--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,12 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: set timezone
-      run: sudo timedatectl set-timezone 'Asia/Shanghai'
+      run: 
+        export TZ='Asia/Shanghai'
+        source ~/.bashrc
+        sudo rm -f /etc/localtime
+        sudo ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+        sudo timedatectl set-timezone 'Asia/Shanghai'
         
     - name: Clone project
       run: |
