--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: set timezone
-      run: 
+      run: |
         export TZ='Asia/Shanghai'
         source ~/.bashrc
         sudo rm -f /etc/localtime
