--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: TVBox JSON
 # 触发器
 on:
   schedule:
-    - cron: 45 0/12 * * *
+    - cron: 0 18 * * *
   workflow_dispatch:
 env:
   TZ: "Asia/Hong_Kong"
