--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,15 @@
 name: TVBox JSON
 # 触发器
+# 触发器
 on:
   schedule:
     - cron: '0 15 * * 0' #每周天在国际标准时间15点(北京时间+8，即 23:00)
   workflow_dispatch:
     inputs:
       root_sol:
-        description: "TVBox JSON"
+        description: "Weekly Build Title"
         required: true
-        default: "tv"
+        default: "SmsForwarder"
 
 jobs:
   build:
@@ -17,14 +18,14 @@ jobs:
       # 检出代码
       - uses: actions/checkout@v2
       # 删除旧的工作流
-      - name: Delete TVBox JSON
+      - name: Delete Weekly Build
         uses: Mattraks/delete-workflow-runs@v2
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
-          retain_days: 5 # 全部删除只留正在跑的一条
+          retain_days: 0 # 全部删除只留正在跑的一条
           keep_minimum_runs: 0 # 全部删除只留正在跑的一条
-          delete_workflow_pattern: 'TVBox JSON'
+          delete_workflow_pattern: 'Weekly Build'
         
     - name: Clone project
       run: |
