--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,16 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Delete TVBox JSON
+        uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0 # 全部删除只留正在跑的一条
+          keep_minimum_runs: 0 # 全部删除只留正在跑的一条
+          delete_workflow_pattern: 'TVBox JSON'
+jobs:
         
     - name: Clone project
       run: |
