--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
         rm -rf TVBox/.git
-        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.iqiq.io\/mymine\/tv\/main/g' ${{ github.workspace }}/TVBox/tv.json
+        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.fastgit.org\/mymine\/tv\/main/g' ${{ github.workspace }}/TVBox/tv.json
        
     - name: Upload files actions
       uses: actions/upload-artifact@v2
