--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -5,11 +5,11 @@ on:
   schedule:
     - cron: '0 15 * * 0' #每周天在国际标准时间15点(北京时间+8，即 23:00)
   workflow_dispatch:
-    inputs:
-      root_sol:
-        description: "TVBox"
-        required: true
-        default: "tv"
+#    inputs:
+#      root_sol:
+#        description: "TVBox"
+#        required: true
+#        default: "tv"
 
 jobs:
   build:
