--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -26,3 +26,26 @@ jobs:
           retain_days: 5 # 全部删除只留正在跑的一条
           keep_minimum_runs: 5 # 全部删除只留正在跑的一条
           delete_workflow_pattern: 'TVBox'
+      - name: Clone project
+      run: |
+        git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
+        rm -rf TVBox/.git
+        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.fastgit.org\/mymine\/tv\/main/g' ${{ github.workspace }}/TVBox/tv.json
+       
+    - name: Upload files actions
+      uses: actions/upload-artifact@v2
+      with:
+        name: TVBox
+        path: TVBox/*
+
+    - name: delete files
+      run: |
+        cp -r TVBox/* ${{ github.workspace }}
+        rm -rf TVBox        
+        
+    - name: Update files github
+      uses: EndBug/add-and-commit@v7
+      with:
+        default_author: github_actions
+        message: 'update files actions'
+        add: ${{ github.workspace }}/*
