--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -3,7 +3,7 @@ name: TVBox
 # 触发器
 on:
   schedule:
-    - cron: '0 15 * * 0' #每周天在国际标准时间19点(北京时间+8，即 03:00)
+    - cron: '0 15 * * 0' #每周天在国际标准时间15点(北京时间+8，即 23:00)
   workflow_dispatch:
 #    inputs:
 #      root_sol:
@@ -15,6 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # 检出代码
       - uses: actions/checkout@v2
       # 删除旧的工作流
       - name: Delete TVBox JSON
@@ -22,29 +23,5 @@ jobs:
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
-          retain_days: 5 # 全部删除只留正在跑的一条
-          keep_minimum_runs: 5 # 全部删除只留正在跑的一条
-          delete_workflow_pattern: 'TVBox'
-      - name: Clone project
-      run: |
-        git clone --depth=1 https://gitcode.net/qq_26898231/TVBox
-        rm -rf TVBox/.git
-        sed -i 's/gitcode.net\/qq_26898231\/TVBox\/-\/raw\/main/raw.fastgit.org\/mymine\/tv\/main/g' ${{ github.workspace }}/TVBox/tv.json
-       
-    - name: Upload files actions
-      uses: actions/upload-artifact@v2
-      with:
-        name: TVBox
-        path: TVBox/*
-
-    - name: delete files
-      run: |
-        cp -r TVBox/* ${{ github.workspace }}
-        rm -rf TVBox        
-        
-    - name: Update files github
-      uses: EndBug/add-and-commit@v7
-      with:
-        default_author: github_actions
-        message: 'update files actions'
-        add: ${{ github.workspace }}/*
+          retain_days: 0 # 全部删除只留正在跑的一条
+          keep_minimum_runs: 0 # 全部删除只留正在跑的一条
