--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Clone project
       run: |
         git clone --depth=1 https://gitcode.net/bd/v Projects
+        mv 8.txt tv.json
         rm -rf Projects/.git
-        mv -r 8.txt tv.json
         sed -i 's/gitcode.net\/bd\/v\/-\/raw\/main/raw.fastgit.org\/mymine\/tv\/main/g' ${{ github.workspace }}/Projects/tv.json
        
     - name: Upload files actions
