--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -23,8 +23,8 @@ jobs:
       with:
         token: ${{ github.token }}
         repository: ${{ github.repository }}
-        retain_days: 6 # 只保留最新6条
-        keep_minimum_runs: 6 # 只保留最新6条
+        retain_days: 0 # 只保留最新
+        keep_minimum_runs: 5 # 只保留最新6条
     - name: Clone project
       run: |
         git clone --depth=1 https://gitcode.net/bd/v Projects
